[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytclip"
readme = "README.md"
description = "Command to download a video and cut out a clip."
requires-python = ">=3.10"
keywords = ["youtube", "video", "clip", "download"]
license = { text = "MIT" }
authors = [
    { name = "Zach Vorhies", email = "dont@email.me" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: Console",
]
dependencies = [
    "static_ffmpeg",
    "yt-dlp>=2025.9.26",
    "ytdlp-brighteon>=2023.10.3",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pylint",
    "pytest",
    "pytest-timeout",
    "ruff",
    "pytest-xdist",
]

[tool.setuptools]
packages = ["ytclip"]

[tool.setuptools.dynamic]
version = { attr = "ytclip.version.VERSION" }

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
timeout = 120
timeout_method = "thread"

[project.scripts]
ytclip = "ytclip.cmd:run"
